--- a/src/ContentBlockService.Frontend.Admin/src/app/call-to-action-content-blocks/call-to-action-content-block-edit-embed.component.html
+++ b/src/ContentBlockService.Frontend.Admin/src/app/call-to-action-content-blocks/call-to-action-content-block-edit-embed.component.html
@@ -1,5 +1,5 @@
 <h2></h2>
-<a class="call-to-action-content-block-create">CREATE CALL_TO_ACTION_CONTENT_BLOCK</a>
+<a class="call-to-action-content-block-create">CREATE CALL TO ACTION CONTENT BLOCK</a>
 
 <h3>Name</h3>
 <input class="call-to-action-content-block-name" />
