--- a/src/ContentBlockService.Frontend.Admin/src/app/call-to-action-content-blocks/call-to-action-content-block-edit-embed.component.html
+++ b/src/ContentBlockService.Frontend.Admin/src/app/call-to-action-content-blocks/call-to-action-content-block-edit-embed.component.html
@@ -3,6 +3,19 @@
 
 <h3>Name</h3>
 <input class="call-to-action-content-block-name" />
+
+<h3>Headline</h3>
+<input class="call-to-action-content-block-headline" />
+
+<h3>Call To Action</h3>
+<input class="call-to-action-content-block-call-to-action" />
+
+<h3>Final Note</h3>
+<input class="call-to-action-content-block-final-note" />
+
+<h3>Button Caption</h3>
+<input class="call-to-action-content-block-button-caption" />
+
 <ce-button class="save-button">Save</ce-button>
 <ce-button class="delete-button">Delete</ce-button>
 
