--- a/src/ContentBlockService.Frontend.Admin/src/app/call-to-action-content-blocks/call-to-action-content-block-edit-embed.component.html
+++ b/src/ContentBlockService.Frontend.Admin/src/app/call-to-action-content-blocks/call-to-action-content-block-edit-embed.component.html
@@ -16,6 +16,9 @@
 <h3>Button Caption</h3>
 <input class="call-to-action-content-block-button-caption" />
 
+<h3>Body</h3>
+<div class="call-to-action-content-block-body"></div>
+
 <ce-button class="save-button">Save</ce-button>
 <ce-button class="delete-button">Delete</ce-button>
 
