--- a/src/ContentBlockService.Frontend.Admin/src/app/call-to-action-content-blocks/call-to-action-content-block-edit-embed.component.scss
+++ b/src/ContentBlockService.Frontend.Admin/src/app/call-to-action-content-blocks/call-to-action-content-block-edit-embed.component.scss
@@ -7,6 +7,11 @@ ce-call-to-action-content-block-edit-embed {
     .call-to-action-content-block-create {
         cursor:pointer;
     }
+
+    .call-to-action-content-block-body {
+        height:300px;
+        margin-bottom:30px;
+    }
 }
 
 
