--- a/src/ContentBlockService.Frontend.Admin/src/app/shared/header.component.html
+++ b/src/ContentBlockService.Frontend.Admin/src/app/shared/header.component.html
@@ -3,6 +3,7 @@
         <h1>Content Block Service</h1>
         <ce-link routesegments='["headline-content-blocks"]' class="headline-content-blocks" auth-required>Headlines</ce-link>
         <ce-link routesegments='["call-to-action-content-blocks"]' class="call-to-action-content-blocks" auth-required>Call To Actions</ce-link>
+        <ce-link routesegments='["mega-header-content-blocks"]' class="mega-header-content-blocks" auth-required>Mega Headers</ce-link>
     </div>
     <div class="header-right">
         <ce-link routesegments='["login"]' class="logout" auth-required>logout</ce-link>
